force-app/main/default/objects/ERUM_Direcciones_Envio__c/ERUM_Direcciones_Envio__c.object-meta.xml
<CustomObject>
    <label>Direcciones Envio</label>
    <nameField>
        <label>Nombre Dirección</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcciones Envio</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>