force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Activa_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Activa_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está marcado indica que el ERP ha confirmado que la Dirección se ha podido crear en su sistema.</description>
    <label>Activa ERP</label>
    <type>Checkbox</type>
</CustomField>