force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Calle__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Calle__c</fullName>
    <label>Calle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>