force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>