force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Cod_de_Direccion_NAV__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cod_de_Direccion_NAV__c</fullName>
    <externalId>true</externalId>
    <label>Cód de Dirección NAV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>