force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Codigo_postal__c</fullName>
    <label>Código postal</label>
    <length>12</length>
    <type>Text</type>
</CustomField>