force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Country_RegionCOD__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Country_RegionCOD__c</fullName>
    <label>ISO Cod. Region</label>
    <length>5</length>
    <type>Text</type>
</CustomField>