force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Direccion_Principal_Envio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Direccion_Principal_Envio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>si está marcado significa que es la direccion principal de envio</description>
    <label>Dirección Principal Envío</label>
    <type>Checkbox</type>
</CustomField>