force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Enviada_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Enviada_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está marcado indica que Salesforce ha enviado los Datos de Dirección al ERP.</description>
    <label>Enviada ERP</label>
    <type>Checkbox</type>
</CustomField>