force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Fecha_Activa_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_Activa_ERP__c</fullName>
    <label>Fecha Activa ERP</label>
    <type>Date</type>
</CustomField>