force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Nombre_comercial__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Nombre_comercial__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nombre comercial</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones Envio</relationshipLabel>
    <relationshipName>Direcciones_Envio</relationshipName>
    <type>Lookup</type>
</CustomField>