force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Num_de_Direccion_NAV__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Num_de_Direccion_NAV__c</fullName>
    <displayFormat>SF{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>ERUM_Num_de_Direccion_NAV</label>
    <type>AutoNumber</type>
</CustomField>