force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Pais__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Pais__c</fullName>
    <label>País</label>
    <length>10</length>
    <type>Text</type>
</CustomField>