force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ERUM_Tipo_cuenta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_cuenta__c</fullName>
    <formula>ERUM_Nombre_comercial__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Cuenta</label>
    <type>Text</type>
</CustomField>