force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/ExternalId_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Salesforce__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId Salesforce</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>