force-app/main/default/objects/ERUM_Direcciones_Envio__c/fields/Numero_cliente_ERP__c.field-meta.xml
<CustomField>
    <fullName>Numero_cliente_ERP__c</fullName>
    <formula>ERUM_Nombre_comercial__r.Numero_cliente_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número cliente ERP</label>
    <type>Text</type>
</CustomField>