force-app/main/default/objects/ERUM_Direcciones_Envio__c/recordTypes/DireccionEnvioRetail.recordType-meta.xml
<RecordType>
    <fullName>DireccionEnvioRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar direcciones de envío pertenecientes a la empresa de retail</description>
    <label>Retail</label>
</RecordType>