force-app/main/default/objects/ERUM_Direcciones_Envio__c/recordTypes/DireccionEnvioSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>DireccionEnvioSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar direcciones de envío pertenecientes a la empresa de seguridad vial</description>
    <label>Seguridad Vial</label>
</RecordType>