force-app/main/default/objects/ERUM_Direcciones_Envio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ERUM_Cod_de_Direccion_NAV__c</columns>
    <columns>ERUM_Calle__c</columns>
    <columns>ERUM_Ciudad__c</columns>
    <columns>ERUM_Codigo_postal__c</columns>
    <columns>ERUM_Country_RegionCOD__c</columns>
    <columns>ERUM_Pais__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>oficinas</value>
    </filters>
    <label>Todos</label>
</ListView>